efficient loading of plugin descriptors
GitOrigin-RevId: 85d1641d113b45ebd22c1144316587489925f97f